Temp: Save changes before rebase

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,11 +1,16 @@
 {
   "compilerOptions": {
+    "jsx": "react-jsx",        // or "react-jsxdev" for dev mode
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "module": "esnext",
+    "target": "es5",           // or es6/es2015
+    "moduleResolution": "node",
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true
-  },
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ]
+    "strict": true,
+    "noEmit": true,
+    "isolatedModules": true
+  }
 }
