--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,10 @@
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
-    "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.3"
+    "react-multi-carousel": "^2.8.6",
+    "react-router-dom": "^7.6.3",
+    "twelvedata": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
