--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.5.0",
     "react-multi-carousel": "^2.8.6",
     "react-router-dom": "^7.6.3",
+    "react-tradingview-embed": "^3.0.6",
     "twelvedata": "^3.0.1"
   },
   "devDependencies": {
