--- a/client/package.json
+++ b/client/package.json
@@ -14,13 +14,17 @@
     "aos": "^2.3.4",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "framer-motion": "^12.23.6",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-multi-carousel": "^2.8.6",
     "react-router-dom": "^7.6.3",
     "react-tradingview-embed": "^3.0.6",
+    "reactstrap": "^9.2.3",
     "twelvedata": "^3.0.1"
   },
   "devDependencies": {
